Database usable, not used all the way

--- a/App.config
+++ b/App.config
@@ -1,3 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+	<connectionStrings>
+		<add name="MyDB" connectionString="Server=localhost;Database=mydb;Uid=root;Pwd=:M07hr4:;SslMode=Preferred" providerName="MySql"/>
+	</connectionStrings>
 </configuration>
