Local database creation finished

--- a/App.config
+++ b/App.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="MyDB" connectionString="Server=localhost;Database=mydb;Uid=Jason;Pwd=guest;SslMode=Preferred" providerName="MySql"/>
+		<add name="MyDB" connectionString="Server=localhost;Database=mydb;Uid=root;Pwd=Capstone;SslMode=Preferred" providerName="MySql"/>
+		<add name="NewDB" connectionString="Server=localhost;Uid=root;Pwd=Capstone;SslMode=Preferred" providerName="MySql"/>
 	</connectionStrings>
 </configuration>
